--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
+
 <!DOCTYPE html>
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <head>
-        <meta charset="utf-8">
-        <title>重定向 Redirecting…</title>
-        <link rel="canonical" href="https://instagram.com/13wi2isgood/">
+        <title>測試 Testing</title>
     </head>
-    <body>
-        <h1><a id="time"></a></h1>
-        <script type="text/javascript">
-            var t = 5; //設定倒數秒數
-
-            //顯示倒數秒收
-            function showTime() {
-                t -= 1;
-                document.getElementById("time").innerHTML = '重定向 Redirecting… ' + t + 's';
-
-                if(t == 0) {
-                    location.href = "https://instagram.com/13wi2isgood/";
-                    document.getElementById("time").innerHTML = '<a href="https://instagram.com/13wi2isgood/">如果你沒有重定向，點擊這裡。 Click here if you are not redirected.</a>';
-                    return false;
-                }
-
-                setTimeout("showTime()",1000); //每秒執行一次 showTime()
-            }
-
-            showTime(); //執行showTime()
-        </script>
-    </body>
+   <body>
+       <h1>測試 Testing</h1>
+       <h2><a href="//google.com">Google</a></h2>
+      <script>
+         setTimeout(function(){
+            window.location.href = 'https://instagram.com/13wi2isgood/';
+         }, 5000);
+      </script>
+   </body>
 </html>
