--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <head>
-        <title>測試 Testing</title>
+        <title>Hypixel.One - Redirecting</title>
     </head>
    <body>
-       <h1>測試 Testing</h1>
-       <h2><a href="//google.com">Google</a></h2>
+       <h1>在訪問vape.gg之前，我們正在檢查您的瀏覽器。
+           此過程會自動處理。您的瀏覽器將很快重定向到您請求的內容。</h1>
+       <p>請等待５秒…</p>
+       <h2></h2>
       <script>
          setTimeout(function(){
             window.location.href = 'https://instagram.com/13wi2isgood/';
