--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     <p data-translate="allow_5_secs">請允許等待５秒&hellip;</p>
   </div>
    
-  <form id="challenge-form" action="/13wi2jsg00d" method="POST" enctype="application/x-www-form-urlencoded">
+  <form id="challenge-form" action="/0820" method="POST" enctype="application/x-www-form-urlencoded">
     <input type="hidden" name="r" value="BackTo2017"></input>
-    <input type="hidden" name="jschl_vc" value="ServerProFreeRespect"/>
-    <input type="hidden" name="pass" value="DantaOuO"/>
-    <input type="hidden" id="jschl-answer" name="Discord"/>
+    <input type="hidden" name="jschl_vc" value="DantaOuO"/>
+    <input type="hidden" name="pass" value="Discord"/>
+    <input type="hidden" id="jschl-answer" name="ServerProFreeServerRespect"/>
   </form>
   
 </div>
